Update codebase: remove list bullets, apply latest style and content improvements

--- a/about.html
+++ b/about.html
@@ -4,16 +4,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>About</title>
 </head>
 
 <body>
-    <h1>Aboutm Us</h1>
-    <p>This is the about page.</p>
-
-    <a href="index.html">Home</a>
-    <a href="about.html">About</a>
-    <a href="contact.html">Contact</a>
+    <header>
+        <h1>About Us</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section>
+            <h2>Our Story</h2>
+            <p>We are a team of developers who are passionate about creating beautiful and functional websites.</p>
+        </section>
+        <section>
+            <h2>Our Team</h2>
+            <p>Meet the amazing people who make AppSquad possible.</p>
+        </section>
+        <section>
+            <h2>Our Mission</h2>
+            <p>Our mission is to provide the best possible app for our users.</p>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2025 AppSquad</p>
+    </footer>
 </body>
 
 </html>
