Update codebase: remove list bullets, apply latest style and content improvements

--- a/carpencil.html
+++ b/carpencil.html
@@ -4,22 +4,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>CarPencil</title>
 </head>
 
 <body>
-    <h1>CarPencil</h1>
-    <p>This is the CarPencil page.</p>
+    <header>
+        <h1>CarPencil</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section>
+            <h2>CarPencil</h2>
+            <p>This is the CarPencil page.</p>
+        </section>
+        <section>
+            <a href="gallery.html"><img src="images/CarPencil.png" alt="CarPencil" width="600" height="400"
+                style="border: 2px solid black;"></a>
+    
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2025 CarPencil</p>
+    </footer>
 
-    <a href="index.html">Home</a>
-    <a href="about.html">About</a>
-    <a href="contact.html">Contact</a>
-    <a href="gallery.html">Gallery</a>
-    <br>
 
-    <a href="gallery.html"><img src="images/CarPencil.png" alt="CarPencil" width="600" height="400"
-            style="border: 2px solid black;"></a>
-
+    
 
 </body>
 
