--- a/contact.html
+++ b/contact.html
@@ -4,12 +4,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Contact</title>
 </head>
 
 <body>
-    <h1>Contact</h1>
-    <p>This is the contact page.</p>
+    <header>
+        <h1>Contact</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section>
+            <h2>Contact Us</h2>
+            <p>If you have any questions or feedback, please contact us using the information below.</p>
+        </section>
+        <section>
+            <h2>Contact Form</h2>
+            <form action="submit_form.php" method="post">
+                
+            </form>
+    </main>
 
 </body>
 
