--- a/gallery.html
+++ b/gallery.html
@@ -4,28 +4,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Gallery</title>
 </head>
 
-<body>
-    <h1>Gallery</h1>
-    <p>This is the gallery page.</p>
-
-    <a href="index.html">Home</a>
-    <a href="about.html">About</a>
-    <a href="contact.html">Contact</a>
-    <br>
-
-    <a href="carpencil.html"><img src="images/CarPencil.png" alt="CarPencil" width="600" height="400"
-            style="border: 2px solid black;"></a>
-    <br>
-    <a href="motorcycle.html"><img src="images/MotorCycle.png" alt="MotorCycle" width="600" height="400"
-            style="border: 2px solid black;"></a>
-    <br>
-
-    <a href="redcar.html"><img src="images/RedCar.png" alt="RedCar" width="600" height="400"
-            style="border: 2px solid black;"></a>
-    <br>
+<body>  
+    <header>    
+        <h1>Gallery</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
+            </ul>
+        </nav>  
+    </header>
+    <main>
+        <section>
+            <h2>Gallery</h2>
+            <p>This is the gallery page.</p>
+        </section>
+        <section>
+            <a href="carpencil.html"><img src="images/CarPencil.png" alt="CarPencil" width="600" height="400"
+                style="border: 2px solid black;"></a>
+        </section>
+        <section>
+            <a href="motorcycle.html"><img src="images/MotorCycle.png" alt="MotorCycle" width="600" height="400"
+                style="border: 2px solid black;"></a>
+        </section>
+        <section>
+            <a href="redcar.html"><img src="images/RedCar.png" alt="RedCar" width="600" height="400"
+                style="border: 2px solid black;"></a>
+        </section>
+        
+    </main>
+    <footer>
+        <p>&copy; 2025 Gallery</p>
+    </footer>
+   
+    
 
 
 </body>
