--- a/motorcycle.html
+++ b/motorcycle.html
@@ -4,24 +4,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Motorcycle</title>
 </head>
 
-<body>
-    <!-- This is the header section -->
-    <h1>Motorcycle</h1>
-    <p>This is the Motorcycle page.</p>
+<body>  
+    <header>
+        <h1>Motorcycle</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>  
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
+            </ul>
+        </nav>
+    </header>
+        <main>
+        <section>
+            <h2>Motorcycle</h2>
+            <p>This is the Motorcycle page.</p>
+        </section>
+        <section>
+                <a href="gallery.html"><img src="images/MotorCycle.png" alt="MotorCycle" width="600" height="400"
+                style="border: 2px solid black;"></a>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2025 Motorcycle</p>
+    </footer>           
 
-    <!-- This is the navigation section -->
-    <a href="index.html">Home</a>
-    <a href="about.html">About</a>
-    <a href="contact.html">Contact</a>
-    <a href="gallery.html">Gallery</a>
-    <br>
+    </main>
 
-    <!-- This is the image section -->
-    <a href="gallery.html"><img src="images/MotorCycle.png" alt="MotorCycle" width="600" height="400"
-            style="border: 2px solid black;"></a>
+   
 </body>
 
 </html>
