--- a/redcar.html
+++ b/redcar.html
@@ -4,24 +4,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>RedCar</title>
 </head>
 
 <body>
     <!-- This is the header section -->
-    <h1>RedCar</h1>
-    <p>This is the RedCar page.</p>
+    <header>    </header>
+        <h1>RedCar</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>  
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
+            </ul>
+        </nav>
+    </header>
+  <main>
+        <section>
+            <h2>RedCar</h2>
+            <p>This is the RedCar page.</p>
+        </section>
+        <section>
+            <a href="gallery.html"><img src="images/RedCar.png" alt="RedCar" width="600" height="400"
+                style="border: 2px solid black;"></a>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2025 RedCar</p>
+    </footer>
 
-    <!-- This is the navigation section -->
-    <a href="index.html">Home</a>
-    <a href="about.html">About</a>
-    <a href="contact.html">Contact</a>
-    <a href="gallery.html">Gallery</a>
-    <br>
-
-    <!-- This is the image section -->
-    <a href="gallery.html"><img src="images/RedCar.png" alt="RedCar" width="600" height="400"
-            style="border: 2px solid black;"></a>
+    
 </body>
 
 </html>
