--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+    <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -9,40 +9,41 @@
 </head>
 
 <body>
-    <a href="about.html">Click here to go to About us</a>
-    <a href="contact.html">Click here to go to Contact us</a>
-    <a href="gallery.html">Click here to go to Gallery</a>
-    <h1>Hello World</h1><br>
-
-    <!-- Here are different types of headings -->
-    <h1>This is a heading 1</h1>
-    <h2>This is a heading 2</h2>
-    <h3>This is a heading 3</h3>
-    <h4>This is a heading 4</h4>
-    <h5>This is a heading 5</h5>
-    <h6>This is a heading 6</h6>
-
-    <p>Welcome to my website</p>
-    <p>This is a paragraph of text.</p>
-
-    <a href="carpencil.html"></a><img src="images/CarPencil.png" alt="CarPencil" width="150" height="100"></a>
-    </br>
-
-    <a href="motorcycle.html"></a><img src="images/MotorCycle.png" alt="MotorCycle" height="100"></a>
-
-    <br>
-    <a href="redcar.html"><img src="images/RedCar.png" alt="RedCar" width="150" height="100"></a>
-    <br>
-
-    <a href="https://www.itvarsity.org">IT Varsity</a>
-
-    <br>
-    <a href="https://www.google.com" target="_blank">Google</a>
-
-    <br>
-    <a href="https://www.itvarsity.org" target="_blank">IT Varsity</a>
-
-
+    <header>
+        <h1>Hello World</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="gallery.html">Gallery</a></li> 
+            </ul>
+        </nav>                  
+    </header>
+    <main>
+        <section>
+            <h2>Hello World</h2>
+            <p>This is a paragraph of text.</p>
+        </section>
+        <section>
+            <a href="carpencil.html"><img src="images/CarPencil.png" alt="CarPencil" width="150" height="100"></a>
+        </section>
+        <section>
+            <a href="motorcycle.html"><img src="images/MotorCycle.png" alt="MotorCycle" width="150" height="100"></a>
+        </section>
+        <section>
+            <a href="redcar.html"><img src="images/RedCar.png" alt="RedCar" width="150" height="100"></a>
+        </section>
+        <section>
+            <a href="https://www.itvarsity.org">IT Varsity</a>
+        </section>
+                                   
+    </main>
+    <footer>
+        <p>&copy; 2025 Hello World</p>
+    </footer>
+    
+ 
 
 </body>
 
